--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.1",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@sentry/nextjs": "8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^7.1.1",
     "@vercel/postgres": "^0.10.0",
@@ -37,10 +40,12 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.456.0",
     "next": "^15.0.1",
+    "next-themes": "^0.4.3",
     "papaparse": "^5.4.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.13.3",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
