--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.3.1",
     "recharts": "^2.13.3",
     "server-only": "^0.0.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.3.0",
