--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-themes": "^0.4.3",
     "papaparse": "^5.4.1",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.186.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.13.3",
