--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "papaparse": "^5.4.1",
     "postgres": "^3.4.4",
     "posthog-js": "^1.186.1",
+    "posthog-node": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.13.3",
